feat: set maven opts one more time